Correções no português :D

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experiencia-texto">Desenvolvimento de projetos, que utilizam <strong>HTML</strong>,
+            <p class="experiencia-texto">Desenvolvimento de projetos que utilizam <strong>HTML</strong>,
                 <strong>CSS</strong> e
                 <strong>Javascript</strong> para aplicativos web.
             </p>
@@ -47,13 +47,13 @@
                 <span class="empresa-ano">2020 - 2022</span>
                 <h3 class="empresa-titulo">Dermoclass</h3>
                 <span class="empresa-titulo">Serviços de TI</span>
-                <p class="empresa-texto">Na Dermoclass eu atuei como gestor da tecnologia da informação, buscando a
-                    eficiência na gestão de produtos </p>
+                <p class="empresa-texto">Na Dermoclass, eu atuei como gestor da tecnologia da informação, buscando a
+                    eficiência na gestão de produtos. </p>
                 <ul class="empresa-habilidade">
-                    <li>Excell</li>
+                    <li>Excel</li>
                     <li>Word</li>
                     <li>Photoshop</li>
-                    <li>Ilustrator</li>
+                    <li>Illustrator</li>
                 </ul>
             </div>
 
@@ -85,9 +85,9 @@
 
             <h2 class="subtitulo">Formação</h2>
             <div>
-                <p class="formacao-texto">Atualmente sou estudante de <strong>graduação</strong>, mas me
-                    <strong>empenho</strong> constantemente a finalizar alguns cursos por fora da faculdade, afim de me
-                    manter sempre por dentro das <strong>novidadade</strong> do mercado.
+                <p class="formacao-texto">Atualmente, estou <strong>graduando</strong>, e me
+                    <strong>empenho</strong> constantemente em finalizar cursos além da faculdade, a fim de me
+                    manter sempre por dentro das <strong>novidadades</strong> do mercado.
                 </p>
                 <ul class="estudo-lista">
                     <li class="estudo">
