Corrigindo o pt parte 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p class="empresa-texto">Colaboração com a equipe de
                     desenvolvimento para compreender os requisitos e as
                     funcionalidades dos produtos. Criar planos de teste detalhados, incluindo casos de
-                    teste,cenários e critérios de aceitação. </p>
+                    teste, cenários e critérios de aceitação. </p>
                 <ul class="empresa-habilidade">
                     <li>Comunicação</li>
                     <li>Garantia de Qualidade</li>
@@ -85,7 +85,7 @@
 
             <h2 class="subtitulo">Formação</h2>
             <div>
-                <p class="formacao-texto">Atualmente, estou <strong>graduando</strong>, e me
+                <p class="formacao-texto">Atualmente, estou <strong>graduando</strong> e me
                     <strong>empenho</strong> constantemente em finalizar cursos além da faculdade, a fim de me
                     manter sempre por dentro das <strong>novidadades</strong> do mercado.
                 </p>
