--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um site a respeito de um estudante de programação.">
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
     <title>Emanuel - Dev</title>
 </head>
 
