--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Um site a respeito de um estudante de programação.">
     <link rel="stylesheet" href="./css/style.min.css">
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
     <title>Emanuel - Dev</title>
 </head>
 
