Adicionando sublinhado ao CSS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
 
         <div>
-            <h1>Desenvolvedor<br>Front-End &<br>Back-End</h1>
+            <h1>Desenvolvedor<br>Front-End</h1>
             <p>Em constante evolução</p>
         </div>
 
